--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <a href="#">upgrade your browser</a> to improve your experience.
       </p>
     <![endif]-->
-    <!-- <div style="position:absolute;z-index:0;left:0;top:0;width:100%;height:100%;"> -->
-      <!-- <img src="images/halloweenbackground.jpg" style="width:100%;height:100%; "alt="[]"> -->
+    <div style="position:absolute;z-index:0;left:0;top:0;width:100%;height:100%;">
+      <img class="backgroundimage" src="images/halloweenbackground.jpg" style="width:100%;height:100%; "alt="[]">
       
         <div>
             <button type="submit" onClick="refreshPage()">REROLL!</button>
